--- a/app/frontend/src/pages/chat/Chat.module.css
+++ b/app/frontend/src/pages/chat/Chat.module.css
@@ -107,7 +107,7 @@
     flex-grow: 1;
     max-width: 1028px;
     width: 100%;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     padding-left: 24px;
     padding-right: 24px;
     display: flex;
