--- a/app/frontend/src/pages/tda/files-list.module.css
+++ b/app/frontend/src/pages/tda/files-list.module.css
@@ -15,7 +15,7 @@
   
   .files_list_item {
     width: calc(100% - 0.5rem);
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: flex-start;
     padding: 0.5rem 0;
